--- a/packages/host/public/index.html
+++ b/packages/host/public/index.html
@@ -463,5 +463,10 @@
       type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAW6WugUsDtlV9lImEB6cE5PtZqPtKSM3o&libraries=places"
     ></script>
+    <script
+      type="text/javascript"
+      src="https://platform-api.sharethis.com/js/sharethis.js#property=5df6a4d492732d0012e284ee&product=inline-share-buttons&cms=sop"
+      async="async"
+    ></script>
   </body>
 </html>
