Fixed twitch link
Update host avatar to use initials
Mde icons black

--- a/packages/guest/public/index.html
+++ b/packages/guest/public/index.html
@@ -75,6 +75,7 @@
   <div id="root"></div>
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAW6WugUsDtlV9lImEB6cE5PtZqPtKSM3o&libraries=places"></script>
+  <script src="https://embed.twitch.tv/embed/v1.js"></script>
 </body>
 
 </html>
